# sheets-airtable-sync

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONCEPT_SCOPE.md  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  executor.policy.yaml  executor.sh  pyproject.toml  repo-metadata.json
.github/workflows/: ci.yml
configs/mappings/: form-responses-to-airtable.json  leads-to-airtable.json  project-tracker-to-airtable.json  shopify-orders-to-airtable.json
docs/: api.md  architecture.md  automation-kit-backbone.md  case-study.md  client-adaptation-matrix.md  client-fit-mapping.md  deployment.md  evidence.md  executor.md  live-integration-gate.md  mcp.md  platform-handoff.md  portfolio-review-checkpoint.md  public-readiness-checklist.md  sandbox-walkthrough.md
examples/api-requests/: README.md  report-request.json  sync-preview-request.json
examples/api-responses/: health.json  report-response.json  sync-preview-response.json
examples/cli/: README.md
examples/input/: crm-leads.json  dirty-rows.json  google-form-responses.json  notion-database-rows.json  project-tracker.json  shopify-orders.json
scripts/: render_proof_screenshots.py  verify_examples.py
tests/: test_api.py  test_backbone.py  test_cli.py  test_clients_fixture.py  test_config.py  test_dead_letter.py  test_examples.py  test_executor.py  test_idempotency.py  test_mcp_server.py  test_models.py  test_notifications.py  test_project_identity.py  test_reports.py  test_retry.py  test_screenshots.py  test_sync.py  test_targets.py  test_templates.py  test_transforms.py
(+31 files in other folders)
