[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sheets-airtable-sync"
version = "0.2.0"
description = "Fixture-safe Google Sheets to Airtable validation, dedupe, report, API, MCP, and mock upsert proof"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
dependencies = [
  "pydantic>=2.0.0",
  "typer>=0.12.0",
  "fastapi>=0.110.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "httpx>=0.27.0",
  "pillow>=9.0.0",
  "uvicorn>=0.29.0",
]
api = ["fastapi>=0.110.0", "uvicorn>=0.29.0", "httpx>=0.27.0"]
screenshots = ["pillow>=9.0.0"]

[project.scripts]
sheets-airtable-sync = "sheets_airtable_sync.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sheets_airtable_sync*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/"]
